WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134469
WebBackForwardListItem should not store back-forward data
https://bugs.webkit.org/show_bug.cgi?id=134469
Summary
WebBackForwardListItem should not store back-forward data
Anders Carlsson
Reported
2014-06-30 16:31:42 PDT
WebBackForwardListItem should not store back-forward data
Attachments
Patch
(6.66 KB, patch)
2014-06-30 16:33 PDT
,
Anders Carlsson
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2014-06-30 16:33:03 PDT
Created
attachment 234114
[details]
Patch
Anders Carlsson
Comment 2
2014-06-30 16:40:05 PDT
Committed
r170614
: <
http://trac.webkit.org/changeset/170614
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug